// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputGroup default match 1`] = `
<Component>
  <ThemeProvider
    theme={
      {
        "colors": {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua300": "#AEE5F8",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#3c4248",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue300": "#7BA4FE",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "green100": "#E9FAD2",
          "green200": "#CFF6A6",
          "green300": "#A7E675",
          "green400": "#7FCD50",
          "green500": "#4CAD20",
          "green600": "#369417",
          "green700": "#237c10",
          "green900": "#095306",
          "neutral100": "#f9f9fa",
          "neutral150": "#f6f7f9",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange300": "#FFC766",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple300": "#E5A5CE",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red300": "#FF9E82",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise300": "#5EEBE5",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow300": "#F8DC63",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
        },
        "effects": {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": {
          "badges": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "20px",
          },
          "subtitle1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": {
          "scrollbar": {
            "&::-webkit-scrollbar": {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
          "selection": {
            "& ::-moz-selection": {
              "backgroundColor": "#ffde99",
            },
            "& ::selection": {
              "backgroundColor": "#ffde99",
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": {
              "minify": false,
            },
            "plugins": [],
          },
          "plugins": PluginsRegistry {
            "plugins": {
              "external": [
                {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onProcessRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": [
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": {
              "onChangeValue": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": [],
              "onProcessStyle": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": [
                [Function],
              ],
            },
          },
          "version": "10.10.0",
        }
      }
    >
      <InputGroup
        hideInputsLabel="Hide inputs"
        inputs={
          [
            {
              "label": "Lorem ipsum",
              "name": "lorem",
            },
            {
              "label": "Lorem ipsum 2",
              "name": "lorem2",
            },
            {
              "label": "Lorem ipsum 3",
              "name": "lorem3",
            },
          ]
        }
        isReadOnly={false}
        label="Lorem ipsum"
        labelMode="horizontal"
        onChange={[Function]}
        overrides={{}}
        showInputsLabel="Show inputs"
        value={{}}
      >
        <div
          className="HoiPoi__InputGroup__root-1-0 HoiPoi__InputGroup__horizontal-1-6"
        >
          <div
            className="HoiPoi__InputGroup__formControl-1-2"
          >
            <InputControl
              isReadOnly={false}
              label="Lorem ipsum"
              labelMode="horizontal"
              name="lorem"
              onBlur={[Function]}
              onChange={[Function]}
              onEnter={[Function]}
              onFocus={[Function]}
            >
              <ForwardRef
                hideClear={false}
                isCopyable={false}
                isFullWidth={true}
                isReadOnly={false}
                label="Lorem ipsum"
                labelMode="horizontal"
                name="lorem"
                numberDecimals={2}
                onBlur={[Function]}
                onChange={[Function]}
                onEnter={[Function]}
                onFocus={[Function]}
                overrides={{}}
                type="text"
                value=""
              >
                <ForwardRef
                  className="HoiPoi__Input__root-1-8 HoiPoi__Input__isFullWidth-1-20"
                  isFullWidth={true}
                  label="Lorem ipsum"
                  labelMode="horizontal"
                  overrides={{}}
                >
                  <div
                    className="HoiPoi__InputWrapper__root-1-28 HoiPoi__InputWrapper__horizontal-1-33 HoiPoi__InputWrapper__isFullWidth-1-35 HoiPoi__Input__root-1-8 HoiPoi__Input__isFullWidth-1-20"
                  >
                    <div
                      className="HoiPoi__InputWrapper__inputWrapper-1-29"
                    >
                      <Label
                        className="HoiPoi__InputWrapper__Label-1-31"
                        overrides={{}}
                      >
                        <div
                          className="HoiPoi__Label__root-1-37 HoiPoi__InputWrapper__Label-1-31"
                        >
                          <ForwardRef
                            as="span"
                            className="HoiPoi__Label__Text-1-38"
                            isTruncated={false}
                            overrides={{}}
                            type="body"
                          >
                            <span
                              className="HoiPoi__Text__root-1-41 HoiPoi__Label__Text-1-38 HoiPoi__Text__body-1-51"
                              style={{}}
                            >
                              Lorem ipsum
                            </span>
                          </ForwardRef>
                        </div>
                      </Label>
                      <div
                        className="HoiPoi__InputWrapper__formControl-1-34"
                      >
                        <div
                          className="HoiPoi__Input__inputComponents-1-10"
                        >
                          <input
                            className="HoiPoi__Input__input-1-11"
                            name="lorem"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            readOnly={false}
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                    <Component
                      className="HoiPoi__InputWrapper__fieldBottom-1-30"
                      isFullWidth={true}
                      overrides={{}}
                    />
                  </div>
                </ForwardRef>
              </ForwardRef>
            </InputControl>
            <Link
              isTruncated={false}
              onClick={[Function]}
              overrides={{}}
              type="caption"
              underline={false}
            >
              <button
                className="HoiPoi__Link__root-1-65 HoiPoi__Link__caption-1-78"
                onClick={[Function]}
                type="button"
              >
                Show inputs
              </button>
            </Link>
          </div>
          <div
            className="HoiPoi__InputGroup__inputsControl-1-3 HoiPoi__InputGroup__hidden-1-7"
          >
            <InputControl
              isReadOnly={false}
              key="lorem2"
              label="Lorem ipsum 2"
              labelMode="horizontal"
              name="lorem2"
              onBlur={[Function]}
              onChange={[Function]}
              overrides={
                {
                  "Label": {
                    "classes": {
                      "text": "HoiPoi__InputGroup__hiddenInputLabel-1-1",
                    },
                  },
                }
              }
            >
              <ForwardRef
                hideClear={false}
                isCopyable={false}
                isFullWidth={true}
                isReadOnly={false}
                label="Lorem ipsum 2"
                labelMode="horizontal"
                name="lorem2"
                numberDecimals={2}
                onBlur={[Function]}
                onChange={[Function]}
                overrides={
                  {
                    "Label": {
                      "classes": {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-1-1",
                      },
                    },
                  }
                }
                type="text"
                value=""
              >
                <ForwardRef
                  className="HoiPoi__Input__root-1-8 HoiPoi__Input__isFullWidth-1-20"
                  isFullWidth={true}
                  label="Lorem ipsum 2"
                  labelMode="horizontal"
                  overrides={
                    {
                      "Label": {
                        "classes": {
                          "text": "HoiPoi__InputGroup__hiddenInputLabel-1-1",
                        },
                      },
                    }
                  }
                >
                  <div
                    className="HoiPoi__InputWrapper__root-1-28 HoiPoi__InputWrapper__horizontal-1-33 HoiPoi__InputWrapper__isFullWidth-1-35 HoiPoi__Input__root-1-8 HoiPoi__Input__isFullWidth-1-20"
                  >
                    <div
                      className="HoiPoi__InputWrapper__inputWrapper-1-29"
                    >
                      <Label
                        className="HoiPoi__InputWrapper__Label-1-31"
                        classes={
                          {
                            "text": "HoiPoi__InputGroup__hiddenInputLabel-1-1",
                          }
                        }
                        overrides={{}}
                      >
                        <div
                          className="HoiPoi__Label__root-1-37 HoiPoi__InputWrapper__Label-1-31"
                        >
                          <ForwardRef
                            as="span"
                            className="HoiPoi__Label__Text-1-38"
                            isTruncated={false}
                            overrides={{}}
                            type="body"
                          >
                            <span
                              className="HoiPoi__Text__root-1-41 HoiPoi__Label__Text-1-38 HoiPoi__Text__body-1-51"
                              style={{}}
                            >
                              Lorem ipsum 2
                            </span>
                          </ForwardRef>
                        </div>
                      </Label>
                      <div
                        className="HoiPoi__InputWrapper__formControl-1-34"
                      >
                        <div
                          className="HoiPoi__Input__inputComponents-1-10"
                        >
                          <input
                            className="HoiPoi__Input__input-1-11"
                            name="lorem2"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            readOnly={false}
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                    <Component
                      className="HoiPoi__InputWrapper__fieldBottom-1-30"
                      isFullWidth={true}
                      overrides={
                        {
                          "Label": {
                            "classes": {
                              "text": "HoiPoi__InputGroup__hiddenInputLabel-1-1",
                            },
                          },
                        }
                      }
                    />
                  </div>
                </ForwardRef>
              </ForwardRef>
            </InputControl>
            <InputControl
              isReadOnly={false}
              key="lorem3"
              label="Lorem ipsum 3"
              labelMode="horizontal"
              name="lorem3"
              onBlur={[Function]}
              onChange={[Function]}
              overrides={
                {
                  "Label": {
                    "classes": {
                      "text": "HoiPoi__InputGroup__hiddenInputLabel-1-1",
                    },
                  },
                }
              }
            >
              <ForwardRef
                hideClear={false}
                isCopyable={false}
                isFullWidth={true}
                isReadOnly={false}
                label="Lorem ipsum 3"
                labelMode="horizontal"
                name="lorem3"
                numberDecimals={2}
                onBlur={[Function]}
                onChange={[Function]}
                overrides={
                  {
                    "Label": {
                      "classes": {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-1-1",
                      },
                    },
                  }
                }
                type="text"
                value=""
              >
                <ForwardRef
                  className="HoiPoi__Input__root-1-8 HoiPoi__Input__isFullWidth-1-20"
                  isFullWidth={true}
                  label="Lorem ipsum 3"
                  labelMode="horizontal"
                  overrides={
                    {
                      "Label": {
                        "classes": {
                          "text": "HoiPoi__InputGroup__hiddenInputLabel-1-1",
                        },
                      },
                    }
                  }
                >
                  <div
                    className="HoiPoi__InputWrapper__root-1-28 HoiPoi__InputWrapper__horizontal-1-33 HoiPoi__InputWrapper__isFullWidth-1-35 HoiPoi__Input__root-1-8 HoiPoi__Input__isFullWidth-1-20"
                  >
                    <div
                      className="HoiPoi__InputWrapper__inputWrapper-1-29"
                    >
                      <Label
                        className="HoiPoi__InputWrapper__Label-1-31"
                        classes={
                          {
                            "text": "HoiPoi__InputGroup__hiddenInputLabel-1-1",
                          }
                        }
                        overrides={{}}
                      >
                        <div
                          className="HoiPoi__Label__root-1-37 HoiPoi__InputWrapper__Label-1-31"
                        >
                          <ForwardRef
                            as="span"
                            className="HoiPoi__Label__Text-1-38"
                            isTruncated={false}
                            overrides={{}}
                            type="body"
                          >
                            <span
                              className="HoiPoi__Text__root-1-41 HoiPoi__Label__Text-1-38 HoiPoi__Text__body-1-51"
                              style={{}}
                            >
                              Lorem ipsum 3
                            </span>
                          </ForwardRef>
                        </div>
                      </Label>
                      <div
                        className="HoiPoi__InputWrapper__formControl-1-34"
                      >
                        <div
                          className="HoiPoi__Input__inputComponents-1-10"
                        >
                          <input
                            className="HoiPoi__Input__input-1-11"
                            name="lorem3"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            readOnly={false}
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                    <Component
                      className="HoiPoi__InputWrapper__fieldBottom-1-30"
                      isFullWidth={true}
                      overrides={
                        {
                          "Label": {
                            "classes": {
                              "text": "HoiPoi__InputGroup__hiddenInputLabel-1-1",
                            },
                          },
                        }
                      }
                    />
                  </div>
                </ForwardRef>
              </ForwardRef>
            </InputControl>
          </div>
        </div>
      </InputGroup>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`InputGroup is disabled match 1`] = `
<Component>
  <ThemeProvider
    theme={
      {
        "colors": {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua300": "#AEE5F8",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#3c4248",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue300": "#7BA4FE",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "green100": "#E9FAD2",
          "green200": "#CFF6A6",
          "green300": "#A7E675",
          "green400": "#7FCD50",
          "green500": "#4CAD20",
          "green600": "#369417",
          "green700": "#237c10",
          "green900": "#095306",
          "neutral100": "#f9f9fa",
          "neutral150": "#f6f7f9",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange300": "#FFC766",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple300": "#E5A5CE",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red300": "#FF9E82",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise300": "#5EEBE5",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow300": "#F8DC63",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
        },
        "effects": {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": {
          "badges": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "20px",
          },
          "subtitle1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": {
          "scrollbar": {
            "&::-webkit-scrollbar": {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
          "selection": {
            "& ::-moz-selection": {
              "backgroundColor": "#ffde99",
            },
            "& ::selection": {
              "backgroundColor": "#ffde99",
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": {
              "minify": false,
            },
            "plugins": [],
          },
          "plugins": PluginsRegistry {
            "plugins": {
              "external": [
                {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onProcessRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": [
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": {
              "onChangeValue": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": [],
              "onProcessStyle": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": [
                [Function],
              ],
            },
          },
          "version": "10.10.0",
        }
      }
    >
      <InputGroup
        hideInputsLabel="Hide inputs"
        inputs={
          [
            {
              "label": "Lorem ipsum",
              "name": "lorem",
            },
            {
              "label": "Lorem ipsum 2",
              "name": "lorem2",
            },
            {
              "label": "Lorem ipsum 3",
              "name": "lorem3",
            },
          ]
        }
        isDisabled={true}
        isReadOnly={false}
        label="Lorem ipsum"
        labelMode="horizontal"
        onChange={[Function]}
        overrides={{}}
        showInputsLabel="Show inputs"
        value={{}}
      >
        <div
          className="HoiPoi__InputGroup__root-2-0 HoiPoi__InputGroup__horizontal-2-6"
        >
          <div
            className="HoiPoi__InputGroup__formControl-2-2"
          >
            <InputControl
              isReadOnly={false}
              label="Lorem ipsum"
              labelMode="horizontal"
              name="lorem"
              onBlur={[Function]}
              onChange={[Function]}
              onEnter={[Function]}
              onFocus={[Function]}
            >
              <ForwardRef
                hideClear={false}
                isCopyable={false}
                isFullWidth={true}
                isReadOnly={false}
                label="Lorem ipsum"
                labelMode="horizontal"
                name="lorem"
                numberDecimals={2}
                onBlur={[Function]}
                onChange={[Function]}
                onEnter={[Function]}
                onFocus={[Function]}
                overrides={{}}
                type="text"
                value=""
              >
                <ForwardRef
                  className="HoiPoi__Input__root-2-8 HoiPoi__Input__isFullWidth-2-20"
                  isFullWidth={true}
                  label="Lorem ipsum"
                  labelMode="horizontal"
                  overrides={{}}
                >
                  <div
                    className="HoiPoi__InputWrapper__root-2-28 HoiPoi__InputWrapper__horizontal-2-33 HoiPoi__InputWrapper__isFullWidth-2-35 HoiPoi__Input__root-2-8 HoiPoi__Input__isFullWidth-2-20"
                  >
                    <div
                      className="HoiPoi__InputWrapper__inputWrapper-2-29"
                    >
                      <Label
                        className="HoiPoi__InputWrapper__Label-2-31"
                        overrides={{}}
                      >
                        <div
                          className="HoiPoi__Label__root-2-37 HoiPoi__InputWrapper__Label-2-31"
                        >
                          <ForwardRef
                            as="span"
                            className="HoiPoi__Label__Text-2-38"
                            isTruncated={false}
                            overrides={{}}
                            type="body"
                          >
                            <span
                              className="HoiPoi__Text__root-2-41 HoiPoi__Label__Text-2-38 HoiPoi__Text__body-2-51"
                              style={{}}
                            >
                              Lorem ipsum
                            </span>
                          </ForwardRef>
                        </div>
                      </Label>
                      <div
                        className="HoiPoi__InputWrapper__formControl-2-34"
                      >
                        <div
                          className="HoiPoi__Input__inputComponents-2-10"
                        >
                          <input
                            className="HoiPoi__Input__input-2-11"
                            name="lorem"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            readOnly={false}
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                    <Component
                      className="HoiPoi__InputWrapper__fieldBottom-2-30"
                      isFullWidth={true}
                      overrides={{}}
                    />
                  </div>
                </ForwardRef>
              </ForwardRef>
            </InputControl>
            <Link
              isTruncated={false}
              onClick={[Function]}
              overrides={{}}
              type="caption"
              underline={false}
            >
              <button
                className="HoiPoi__Link__root-2-65 HoiPoi__Link__caption-2-78"
                onClick={[Function]}
                type="button"
              >
                Show inputs
              </button>
            </Link>
          </div>
          <div
            className="HoiPoi__InputGroup__inputsControl-2-3 HoiPoi__InputGroup__hidden-2-7"
          >
            <InputControl
              isReadOnly={false}
              key="lorem2"
              label="Lorem ipsum 2"
              labelMode="horizontal"
              name="lorem2"
              onBlur={[Function]}
              onChange={[Function]}
              overrides={
                {
                  "Label": {
                    "classes": {
                      "text": "HoiPoi__InputGroup__hiddenInputLabel-2-1",
                    },
                  },
                }
              }
            >
              <ForwardRef
                hideClear={false}
                isCopyable={false}
                isFullWidth={true}
                isReadOnly={false}
                label="Lorem ipsum 2"
                labelMode="horizontal"
                name="lorem2"
                numberDecimals={2}
                onBlur={[Function]}
                onChange={[Function]}
                overrides={
                  {
                    "Label": {
                      "classes": {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-2-1",
                      },
                    },
                  }
                }
                type="text"
                value=""
              >
                <ForwardRef
                  className="HoiPoi__Input__root-2-8 HoiPoi__Input__isFullWidth-2-20"
                  isFullWidth={true}
                  label="Lorem ipsum 2"
                  labelMode="horizontal"
                  overrides={
                    {
                      "Label": {
                        "classes": {
                          "text": "HoiPoi__InputGroup__hiddenInputLabel-2-1",
                        },
                      },
                    }
                  }
                >
                  <div
                    className="HoiPoi__InputWrapper__root-2-28 HoiPoi__InputWrapper__horizontal-2-33 HoiPoi__InputWrapper__isFullWidth-2-35 HoiPoi__Input__root-2-8 HoiPoi__Input__isFullWidth-2-20"
                  >
                    <div
                      className="HoiPoi__InputWrapper__inputWrapper-2-29"
                    >
                      <Label
                        className="HoiPoi__InputWrapper__Label-2-31"
                        classes={
                          {
                            "text": "HoiPoi__InputGroup__hiddenInputLabel-2-1",
                          }
                        }
                        overrides={{}}
                      >
                        <div
                          className="HoiPoi__Label__root-2-37 HoiPoi__InputWrapper__Label-2-31"
                        >
                          <ForwardRef
                            as="span"
                            className="HoiPoi__Label__Text-2-38"
                            isTruncated={false}
                            overrides={{}}
                            type="body"
                          >
                            <span
                              className="HoiPoi__Text__root-2-41 HoiPoi__Label__Text-2-38 HoiPoi__Text__body-2-51"
                              style={{}}
                            >
                              Lorem ipsum 2
                            </span>
                          </ForwardRef>
                        </div>
                      </Label>
                      <div
                        className="HoiPoi__InputWrapper__formControl-2-34"
                      >
                        <div
                          className="HoiPoi__Input__inputComponents-2-10"
                        >
                          <input
                            className="HoiPoi__Input__input-2-11"
                            name="lorem2"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            readOnly={false}
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                    <Component
                      className="HoiPoi__InputWrapper__fieldBottom-2-30"
                      isFullWidth={true}
                      overrides={
                        {
                          "Label": {
                            "classes": {
                              "text": "HoiPoi__InputGroup__hiddenInputLabel-2-1",
                            },
                          },
                        }
                      }
                    />
                  </div>
                </ForwardRef>
              </ForwardRef>
            </InputControl>
            <InputControl
              isReadOnly={false}
              key="lorem3"
              label="Lorem ipsum 3"
              labelMode="horizontal"
              name="lorem3"
              onBlur={[Function]}
              onChange={[Function]}
              overrides={
                {
                  "Label": {
                    "classes": {
                      "text": "HoiPoi__InputGroup__hiddenInputLabel-2-1",
                    },
                  },
                }
              }
            >
              <ForwardRef
                hideClear={false}
                isCopyable={false}
                isFullWidth={true}
                isReadOnly={false}
                label="Lorem ipsum 3"
                labelMode="horizontal"
                name="lorem3"
                numberDecimals={2}
                onBlur={[Function]}
                onChange={[Function]}
                overrides={
                  {
                    "Label": {
                      "classes": {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-2-1",
                      },
                    },
                  }
                }
                type="text"
                value=""
              >
                <ForwardRef
                  className="HoiPoi__Input__root-2-8 HoiPoi__Input__isFullWidth-2-20"
                  isFullWidth={true}
                  label="Lorem ipsum 3"
                  labelMode="horizontal"
                  overrides={
                    {
                      "Label": {
                        "classes": {
                          "text": "HoiPoi__InputGroup__hiddenInputLabel-2-1",
                        },
                      },
                    }
                  }
                >
                  <div
                    className="HoiPoi__InputWrapper__root-2-28 HoiPoi__InputWrapper__horizontal-2-33 HoiPoi__InputWrapper__isFullWidth-2-35 HoiPoi__Input__root-2-8 HoiPoi__Input__isFullWidth-2-20"
                  >
                    <div
                      className="HoiPoi__InputWrapper__inputWrapper-2-29"
                    >
                      <Label
                        className="HoiPoi__InputWrapper__Label-2-31"
                        classes={
                          {
                            "text": "HoiPoi__InputGroup__hiddenInputLabel-2-1",
                          }
                        }
                        overrides={{}}
                      >
                        <div
                          className="HoiPoi__Label__root-2-37 HoiPoi__InputWrapper__Label-2-31"
                        >
                          <ForwardRef
                            as="span"
                            className="HoiPoi__Label__Text-2-38"
                            isTruncated={false}
                            overrides={{}}
                            type="body"
                          >
                            <span
                              className="HoiPoi__Text__root-2-41 HoiPoi__Label__Text-2-38 HoiPoi__Text__body-2-51"
                              style={{}}
                            >
                              Lorem ipsum 3
                            </span>
                          </ForwardRef>
                        </div>
                      </Label>
                      <div
                        className="HoiPoi__InputWrapper__formControl-2-34"
                      >
                        <div
                          className="HoiPoi__Input__inputComponents-2-10"
                        >
                          <input
                            className="HoiPoi__Input__input-2-11"
                            name="lorem3"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            readOnly={false}
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                    <Component
                      className="HoiPoi__InputWrapper__fieldBottom-2-30"
                      isFullWidth={true}
                      overrides={
                        {
                          "Label": {
                            "classes": {
                              "text": "HoiPoi__InputGroup__hiddenInputLabel-2-1",
                            },
                          },
                        }
                      }
                    />
                  </div>
                </ForwardRef>
              </ForwardRef>
            </InputControl>
          </div>
        </div>
      </InputGroup>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`InputGroup with values match 1`] = `
<Component>
  <ThemeProvider
    theme={
      {
        "colors": {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua300": "#AEE5F8",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#3c4248",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue300": "#7BA4FE",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "green100": "#E9FAD2",
          "green200": "#CFF6A6",
          "green300": "#A7E675",
          "green400": "#7FCD50",
          "green500": "#4CAD20",
          "green600": "#369417",
          "green700": "#237c10",
          "green900": "#095306",
          "neutral100": "#f9f9fa",
          "neutral150": "#f6f7f9",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange300": "#FFC766",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple300": "#E5A5CE",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red300": "#FF9E82",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise300": "#5EEBE5",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow300": "#F8DC63",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
        },
        "effects": {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": {
          "badges": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "20px",
          },
          "subtitle1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": {
          "scrollbar": {
            "&::-webkit-scrollbar": {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
          "selection": {
            "& ::-moz-selection": {
              "backgroundColor": "#ffde99",
            },
            "& ::selection": {
              "backgroundColor": "#ffde99",
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": {
              "minify": false,
            },
            "plugins": [],
          },
          "plugins": PluginsRegistry {
            "plugins": {
              "external": [
                {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onProcessRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": [
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": {
              "onChangeValue": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": [],
              "onProcessStyle": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": [
                [Function],
              ],
            },
          },
          "version": "10.10.0",
        }
      }
    >
      <InputGroup
        hideInputsLabel="Hide inputs"
        inputs={
          [
            {
              "label": "Lorem ipsum",
              "name": "lorem",
            },
            {
              "label": "Lorem ipsum 2",
              "name": "lorem2",
            },
            {
              "label": "Lorem ipsum 3",
              "name": "lorem3",
            },
          ]
        }
        isReadOnly={false}
        label="Lorem ipsum"
        labelMode="horizontal"
        onChange={[Function]}
        overrides={{}}
        showInputsLabel="Show inputs"
        value={
          {
            "lorem": true,
            "lorem3": true,
          }
        }
      >
        <div
          className="HoiPoi__InputGroup__root-3-0 HoiPoi__InputGroup__horizontal-3-6"
        >
          <div
            className="HoiPoi__InputGroup__formControl-3-2"
          >
            <InputControl
              isReadOnly={false}
              label="Lorem ipsum"
              labelMode="horizontal"
              name="lorem"
              onBlur={[Function]}
              onChange={[Function]}
              onEnter={[Function]}
              onFocus={[Function]}
              value={true}
            >
              <ForwardRef
                hideClear={false}
                isCopyable={false}
                isFullWidth={true}
                isReadOnly={false}
                label="Lorem ipsum"
                labelMode="horizontal"
                name="lorem"
                numberDecimals={2}
                onBlur={[Function]}
                onChange={[Function]}
                onEnter={[Function]}
                onFocus={[Function]}
                overrides={{}}
                type="text"
                value={true}
              >
                <ForwardRef
                  className="HoiPoi__Input__root-3-8 HoiPoi__Input__isFullWidth-3-20"
                  isFullWidth={true}
                  label="Lorem ipsum"
                  labelMode="horizontal"
                  overrides={{}}
                >
                  <div
                    className="HoiPoi__InputWrapper__root-3-28 HoiPoi__InputWrapper__horizontal-3-33 HoiPoi__InputWrapper__isFullWidth-3-35 HoiPoi__Input__root-3-8 HoiPoi__Input__isFullWidth-3-20"
                  >
                    <div
                      className="HoiPoi__InputWrapper__inputWrapper-3-29"
                    >
                      <Label
                        className="HoiPoi__InputWrapper__Label-3-31"
                        overrides={{}}
                      >
                        <div
                          className="HoiPoi__Label__root-3-37 HoiPoi__InputWrapper__Label-3-31"
                        >
                          <ForwardRef
                            as="span"
                            className="HoiPoi__Label__Text-3-38"
                            isTruncated={false}
                            overrides={{}}
                            type="body"
                          >
                            <span
                              className="HoiPoi__Text__root-3-41 HoiPoi__Label__Text-3-38 HoiPoi__Text__body-3-51"
                              style={{}}
                            >
                              Lorem ipsum
                            </span>
                          </ForwardRef>
                        </div>
                      </Label>
                      <div
                        className="HoiPoi__InputWrapper__formControl-3-34"
                      >
                        <div
                          className="HoiPoi__Input__inputComponents-3-10"
                        >
                          <input
                            className="HoiPoi__Input__input-3-11"
                            name="lorem"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            readOnly={false}
                            type="text"
                            value={true}
                          />
                          <div
                            className="HoiPoi__Input__postComponent-3-22"
                          >
                            <div
                              className="HoiPoi__Input__postComponentClose-3-24 HoiPoi__Input__isClickable-3-15 HoiPoi__Input__clear-3-16"
                              key="close"
                            >
                              <Component
                                name="closeSmall"
                                onClick={[Function]}
                                size="large"
                              >
                                <ForwardRef
                                  name="closeSmall"
                                  onClick={[Function]}
                                  overrides={{}}
                                  size="large"
                                >
                                  <span
                                    className="HoiPoi__Icon__root-3-61 HoiPoi__Icon__large-3-64 HoiPoi__Icon__clickable-3-68"
                                    onClick={[Function]}
                                    onMouseDown={[Function]}
                                    onMouseOut={[Function]}
                                    onMouseOver={[Function]}
                                    onMouseUp={[Function]}
                                  >
                                    <CloseSmall
                                      color="#7d8a96"
                                    >
                                      <svg
                                        viewBox="0 0 24 24"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          clipRule="evenodd"
                                          d="M11.9289 13.3288L14.7292 16.1291L16.1434 14.7148L13.3431 11.9146L16.1286 9.12906L14.7144 7.71484L11.9289 10.5003L9.14337 7.71484L7.72915 9.12906L10.5146 11.9146L7.71436 14.7148L9.12857 16.1291L11.9289 13.3288Z"
                                          fill="#7d8a96"
                                          fillRule="evenodd"
                                        />
                                      </svg>
                                    </CloseSmall>
                                  </span>
                                </ForwardRef>
                              </Component>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <Component
                      className="HoiPoi__InputWrapper__fieldBottom-3-30"
                      isFullWidth={true}
                      overrides={{}}
                    />
                  </div>
                </ForwardRef>
              </ForwardRef>
            </InputControl>
            <Link
              isTruncated={false}
              onClick={[Function]}
              overrides={{}}
              type="caption"
              underline={false}
            >
              <button
                className="HoiPoi__Link__root-3-73 HoiPoi__Link__caption-3-86"
                onClick={[Function]}
                type="button"
              >
                Show inputs
              </button>
            </Link>
          </div>
          <div
            className="HoiPoi__InputGroup__inputsControl-3-3 HoiPoi__InputGroup__hidden-3-7"
          >
            <InputControl
              isReadOnly={false}
              key="lorem2"
              label="Lorem ipsum 2"
              labelMode="horizontal"
              name="lorem2"
              onBlur={[Function]}
              onChange={[Function]}
              overrides={
                {
                  "Label": {
                    "classes": {
                      "text": "HoiPoi__InputGroup__hiddenInputLabel-3-1",
                    },
                  },
                }
              }
            >
              <ForwardRef
                hideClear={false}
                isCopyable={false}
                isFullWidth={true}
                isReadOnly={false}
                label="Lorem ipsum 2"
                labelMode="horizontal"
                name="lorem2"
                numberDecimals={2}
                onBlur={[Function]}
                onChange={[Function]}
                overrides={
                  {
                    "Label": {
                      "classes": {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-3-1",
                      },
                    },
                  }
                }
                type="text"
                value=""
              >
                <ForwardRef
                  className="HoiPoi__Input__root-3-8 HoiPoi__Input__isFullWidth-3-20"
                  isFullWidth={true}
                  label="Lorem ipsum 2"
                  labelMode="horizontal"
                  overrides={
                    {
                      "Label": {
                        "classes": {
                          "text": "HoiPoi__InputGroup__hiddenInputLabel-3-1",
                        },
                      },
                    }
                  }
                >
                  <div
                    className="HoiPoi__InputWrapper__root-3-28 HoiPoi__InputWrapper__horizontal-3-33 HoiPoi__InputWrapper__isFullWidth-3-35 HoiPoi__Input__root-3-8 HoiPoi__Input__isFullWidth-3-20"
                  >
                    <div
                      className="HoiPoi__InputWrapper__inputWrapper-3-29"
                    >
                      <Label
                        className="HoiPoi__InputWrapper__Label-3-31"
                        classes={
                          {
                            "text": "HoiPoi__InputGroup__hiddenInputLabel-3-1",
                          }
                        }
                        overrides={{}}
                      >
                        <div
                          className="HoiPoi__Label__root-3-37 HoiPoi__InputWrapper__Label-3-31"
                        >
                          <ForwardRef
                            as="span"
                            className="HoiPoi__Label__Text-3-38"
                            isTruncated={false}
                            overrides={{}}
                            type="body"
                          >
                            <span
                              className="HoiPoi__Text__root-3-41 HoiPoi__Label__Text-3-38 HoiPoi__Text__body-3-51"
                              style={{}}
                            >
                              Lorem ipsum 2
                            </span>
                          </ForwardRef>
                        </div>
                      </Label>
                      <div
                        className="HoiPoi__InputWrapper__formControl-3-34"
                      >
                        <div
                          className="HoiPoi__Input__inputComponents-3-10"
                        >
                          <input
                            className="HoiPoi__Input__input-3-11"
                            name="lorem2"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            readOnly={false}
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                    <Component
                      className="HoiPoi__InputWrapper__fieldBottom-3-30"
                      isFullWidth={true}
                      overrides={
                        {
                          "Label": {
                            "classes": {
                              "text": "HoiPoi__InputGroup__hiddenInputLabel-3-1",
                            },
                          },
                        }
                      }
                    />
                  </div>
                </ForwardRef>
              </ForwardRef>
            </InputControl>
            <InputControl
              isReadOnly={false}
              key="lorem3"
              label="Lorem ipsum 3"
              labelMode="horizontal"
              name="lorem3"
              onBlur={[Function]}
              onChange={[Function]}
              overrides={
                {
                  "Label": {
                    "classes": {
                      "text": "HoiPoi__InputGroup__hiddenInputLabel-3-1",
                    },
                  },
                }
              }
              value={true}
            >
              <ForwardRef
                hideClear={false}
                isCopyable={false}
                isFullWidth={true}
                isReadOnly={false}
                label="Lorem ipsum 3"
                labelMode="horizontal"
                name="lorem3"
                numberDecimals={2}
                onBlur={[Function]}
                onChange={[Function]}
                overrides={
                  {
                    "Label": {
                      "classes": {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-3-1",
                      },
                    },
                  }
                }
                type="text"
                value={true}
              >
                <ForwardRef
                  className="HoiPoi__Input__root-3-8 HoiPoi__Input__isFullWidth-3-20"
                  isFullWidth={true}
                  label="Lorem ipsum 3"
                  labelMode="horizontal"
                  overrides={
                    {
                      "Label": {
                        "classes": {
                          "text": "HoiPoi__InputGroup__hiddenInputLabel-3-1",
                        },
                      },
                    }
                  }
                >
                  <div
                    className="HoiPoi__InputWrapper__root-3-28 HoiPoi__InputWrapper__horizontal-3-33 HoiPoi__InputWrapper__isFullWidth-3-35 HoiPoi__Input__root-3-8 HoiPoi__Input__isFullWidth-3-20"
                  >
                    <div
                      className="HoiPoi__InputWrapper__inputWrapper-3-29"
                    >
                      <Label
                        className="HoiPoi__InputWrapper__Label-3-31"
                        classes={
                          {
                            "text": "HoiPoi__InputGroup__hiddenInputLabel-3-1",
                          }
                        }
                        overrides={{}}
                      >
                        <div
                          className="HoiPoi__Label__root-3-37 HoiPoi__InputWrapper__Label-3-31"
                        >
                          <ForwardRef
                            as="span"
                            className="HoiPoi__Label__Text-3-38"
                            isTruncated={false}
                            overrides={{}}
                            type="body"
                          >
                            <span
                              className="HoiPoi__Text__root-3-41 HoiPoi__Label__Text-3-38 HoiPoi__Text__body-3-51"
                              style={{}}
                            >
                              Lorem ipsum 3
                            </span>
                          </ForwardRef>
                        </div>
                      </Label>
                      <div
                        className="HoiPoi__InputWrapper__formControl-3-34"
                      >
                        <div
                          className="HoiPoi__Input__inputComponents-3-10"
                        >
                          <input
                            className="HoiPoi__Input__input-3-11"
                            name="lorem3"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            readOnly={false}
                            type="text"
                            value={true}
                          />
                          <div
                            className="HoiPoi__Input__postComponent-3-22"
                          >
                            <div
                              className="HoiPoi__Input__postComponentClose-3-24 HoiPoi__Input__isClickable-3-15 HoiPoi__Input__clear-3-16"
                              key="close"
                            >
                              <Component
                                name="closeSmall"
                                onClick={[Function]}
                                size="large"
                              >
                                <ForwardRef
                                  name="closeSmall"
                                  onClick={[Function]}
                                  overrides={{}}
                                  size="large"
                                >
                                  <span
                                    className="HoiPoi__Icon__root-3-61 HoiPoi__Icon__large-3-64 HoiPoi__Icon__clickable-3-68"
                                    onClick={[Function]}
                                    onMouseDown={[Function]}
                                    onMouseOut={[Function]}
                                    onMouseOver={[Function]}
                                    onMouseUp={[Function]}
                                  >
                                    <CloseSmall
                                      color="#7d8a96"
                                    >
                                      <svg
                                        viewBox="0 0 24 24"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          clipRule="evenodd"
                                          d="M11.9289 13.3288L14.7292 16.1291L16.1434 14.7148L13.3431 11.9146L16.1286 9.12906L14.7144 7.71484L11.9289 10.5003L9.14337 7.71484L7.72915 9.12906L10.5146 11.9146L7.71436 14.7148L9.12857 16.1291L11.9289 13.3288Z"
                                          fill="#7d8a96"
                                          fillRule="evenodd"
                                        />
                                      </svg>
                                    </CloseSmall>
                                  </span>
                                </ForwardRef>
                              </Component>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <Component
                      className="HoiPoi__InputWrapper__fieldBottom-3-30"
                      isFullWidth={true}
                      overrides={
                        {
                          "Label": {
                            "classes": {
                              "text": "HoiPoi__InputGroup__hiddenInputLabel-3-1",
                            },
                          },
                        }
                      }
                    />
                  </div>
                </ForwardRef>
              </ForwardRef>
            </InputControl>
          </div>
        </div>
      </InputGroup>
    </JssProvider>
  </ThemeProvider>
</Component>
`;
